--- a/WebService_Spring_CXF/.project
+++ b/WebService_Spring_CXF/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>WebService_Spring_CXF</name>
+	<name>WebService_CXF_Spring</name>
 	<comment></comment>
 	<projects>
 	</projects>
